[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

# PROJECT METADATA
[project]
name = "pycroft"
version = "0.1.0"
authors = [{name = "The Pycroft Authors"}]
license = {text = "Apache Software License"}
description = "AG DSN user management software"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet",
]
urls = {Homepage = "http://github.com/agdsn/pycroft/"}
requires-python = ">= 3.4"
dependencies = [
    "alembic",
    "celery ~= 5.2.1",
    "Flask",
    "Flask-Babel",
    "Flask-Login",
    "Flask-WTF",
    "fints ~= 3.1.0",
    "Jinja2",
    "mac-vendor-lookup",
    "MarkupSafe",
    "Marshmallow",
    "SQLAlchemy >= 1.1",
    "WTForms",
    "Werkzeug",
    "jsonschema",
    "ipaddr >= 2.2.0",
    "passlib",
    "psycopg2-binary >= 2.7.0",
    "reportlab",
    "simplejson",
    "wrapt",
    "wtforms-widgets",
]

[project.readme]
text = """
Pycroft
-------
Pycroft is the user management system of the AG DSN
(Arbeitsgemeinschaft Dresdner Studentennetz)

Notes for developers
--------------------
When editing this file, you need to re-build the docker image for the
changes to take effect.  On a running system, you can just execute
``pip install -e .`` to update e.g. console script names."""

[project.optional-dependencies]
schemadisplay = ["sqlalchemy-schemadisplay"]
testing = ["factory-boy", "Flask-Testing", "nose", "pydot"]

[project.scripts]
pycroft = "scripts.server_run:main"
pycroft_ldap_sync = "ldap_sync.__main__:main"
alembic_wrapper = "scripts.alembic_wrapper:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

# TOOLS
[tool.black]
line-length = 100

[tool.mypy]
exclude = "deps/.*/build"
plugins = "sqlalchemy.ext.mypy.plugin"
python_version = "3.11"
follow_imports = "silent"
ignore_missing_imports = true
# this list shall slowly grow until it covers the whole codebase.
files = [
    "pycroft/helpers",
    "pycroft/lib",
    "pycroft/external_services",
    "ldap_sync",
    "web",
]
mypy_path = "stubs"
namespace_packages = true

# global rules
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_strict_optional = true

# stricter rules
[[tool.mypy.overrides]]
module = [
    "ldap_sync",
    "ldap_sync.*",
    "pycroft.lib",
    "pycroft.lib.*",
    "pycroft.external_services",
    "pycroft.external_services.*",
    "pycroft.helpers",
    "pycroft.helpers.date",
    "pycroft.helpers.errorcode",
    "pycroft.helpers.facilities",
    "pycroft.helpers.i18n",
    "pycroft.helpers.i18n.babel",
    #"pycroft.helpers.interval",
    "pycroft.helpers.net",
    "pycroft.helpers.printing",
    "pycroft.helpers.task",
    "pycroft.helpers.user",
    "pycroft.helpers.utc",
    "web",
    "web.*",
]
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_globals = true

[[tool.mypy.overrides]]
module = [
    "pycroft.lib.finance",
]
strict_optional = true

[tool.pytest.ini_options]
addopts = "--tb=short --no-header"
markers = [
    "slow: slow test (e.g. testing a timeout)",
    "meta: meta test (e.g. testing validity/consistency of fixtures)",
    "hades_logs: tests touching the hades logs, i.e. requiring the `dummy_worker`",
]
filterwarnings = [
    # fixed in kombu v5.3: https://github.com/celery/kombu/issues/1339
    "ignore::DeprecationWarning:kombu.utils.compat",
    # actually caused by reportlab.
    "ignore:.*load_module.*:DeprecationWarning:importlib._bootstrap",
    # fixed in v1.1.2 (unreleased):
    # https://github.com/wtforms/flask-wtf/blob/main/docs/changes.rst#version-112
    "ignore::DeprecationWarning:flask_wtf.recaptcha.widgets",
    # fixed once this PR goes through: https://github.com/python-babel/flask-babel/pull/230
    "ignore:'locked_cached_property' is deprecated:DeprecationWarning:flask_babel",
    "ignore:pkg_resources is deprecated:DeprecationWarning:passlib",

    # TODO this probably comes from the `sphinxcontrib` packages.
    # however, e.g. `sphinxcontrib-fulltoc` is unmaintained (last commit 2017).
    # we probably need to start forking before updating to py3.12.
    # "error:.*Deprecated call.*:DeprecationWarning:",
]
timeout = "10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "deps/",
    "doc/",
]
[tool.ruff.lint]
# to look up the meaning of specific rule IDs, use `ruff rule $id`
select = [
    "E",
    "F",
    "B",  # flake8-bugbear
]
ignore = [
    "E741",  # ambiguous variable names
    "E501",  # line length violations (for now)
]
unfixable = [
    "B",  # fixing bug hazards requires knowledge about the intention

    # We don't want to autofix these: when using `== True|False|None`
    # in a sqlalchemy expression, the `is` would actually _not_ be correct!
    # the correct workaround is to use the `.is_` / `.is_not` functions
    # (or, in the case of bools, don't do a comparison at all or use negation)
    "E711",  # comparison to None
    "E712",  # comparison to True/False
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"pycroft/model/_all.py" = ["F403"]
"helpers/interactive.py" = ["F403"]
"**/*.pyi" = ["F811"]
