[metadata]
name = pycroft
version = 0.1.0
author = The Pycroft Authors
license = Apache Software License
description = AG DSN user management software
url = http://github.com/agdsn/pycroft/
long_description =
    Pycroft
    -------

    Pycroft is the user management system of the AG DSN
    (Arbeitsgemeinschaft Dresdner Studentennetz)

    Notes for developers
    --------------------

    When editing this file, you need to re-build the docker image for the
    changes to take effect.  On a running system, you can just execute
    ``pip install -e .`` to update e.g. console script names.

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet

[options]
packages = find:
zip_safe = False
install_requires =
    alembic
    celery ~= 5.2.1
    Flask
    Flask-Babel
    Flask-Login
    Flask-WTF
    fints ~= 3.0.0
    Jinja2
    mac-vendor-lookup
    MarkupSafe
    Marshmallow
    SQLAlchemy >= 1.1
    WTForms
    Werkzeug
    jsonschema
    ipaddr >= 2.2.0
    passlib
    psycopg2-binary >= 2.7.0
    reportlab
    simplejson
    wrapt
    wtforms-widgets
include_package_data = True
python_requires = >= 3.4
dependency_links =
    git+git://github.com/lukasjuhrich/sqlalchemy_schemadisplay.git@master#egg=sqlalchemy-schemadisplay
tests_require = factory-boy; Flask-Testing; nose; pydot

[options.entry_points]
console_scripts =
    pycroft = scripts.server_run:main
    pycroft_ldap_sync = ldap_sync.__main__:main
    alembic_wrapper = scripts.alembic_wrapper:cli

[options.extras_require]
schemadisplay = sqlalchemy-schemadisplay
